--- a/templates/users/signup.html
+++ b/templates/users/signup.html
@@ -17,7 +17,8 @@
 								<a href="{% url 'users:login' %}" class="ms-1">Sign in</a></span>
 						</div>
 						<!-- Form -->
-						<form>
+						<form action="{% url 'users:signup_save' %}" method="POST" enctype="multipart/form-data">
+							{% csrf_token %}
 								<!-- Username -->
 							<div class="mb-3">
 								<label for="username" class="form-label">User Name</label>
@@ -32,6 +33,18 @@
 							<div class="mb-3">
 								<label for="password" class="form-label">Password</label>
 								<input type="password" id="password" class="form-control" name="password" placeholder="**************" required="">
+							</div>
+							   <!-- Gender -->
+							<label class="form-label" for="user_type">User type</label>
+							<div class="mb-3 col-12 col-md-6 d-flex">
+								<div class="form-check form-check-inline">
+								<input id="Applicant" name="user_type" type="radio" value="Applicant" class="form-check-input" checked>
+								<label class="form-check-label" for="Applicant">Applicant</label>
+								</div>
+								<div class="form-check form-check-inline">
+								<input id="Employer" name="user_type" type="radio" value="Employer" class="form-check-input">
+								<label class="form-check-label" for="Employer">Employer</label>
+								</div>
 							</div>
 								<!-- Checkbox -->
 							<div class="mb-3">
@@ -70,6 +83,12 @@
 								</a>
 							</div>
 						</form>
+						{% if messages %}
+						{% for message in messages  %}
+						<div class="alert {{ message.tags }}" role="alert">
+						  <p>{{message}}</p>
+						{% endfor %}
+						{% endif %}
 					</div>
 				</div>
 			</div>
